solve overlap

--- a/app/client/styles/main.less
+++ b/app/client/styles/main.less
@@ -278,7 +278,6 @@ body {
     flex-flow: row wrap;
 
     .dapp-sticky-bar {
-        z-index: 25;
         position: fixed;
         top: floor(@gridHeight * -1);
         left: 0;
@@ -287,12 +286,14 @@ body {
         padding: @gridHeight/2 @gridWidth * 2.5;
         background: @colorWhite;
         opacity: 0;
+        z-index: -1;
 
         .transition(top @animationSpeed, opacity @animationSpeed * 2);
 
         &.sticky {
             top: floor(@gridHeight * 2);
             opacity: 1;
+            z-index: 25;
         }
 
         > .dapp-identicon {
